--- a/kustomize/base/frontend.yaml
+++ b/kustomize/base/frontend.yaml
@@ -35,6 +35,7 @@ spec:
         runAsUser: 1000
       containers:
         - name: server
+          imagePullPolicy: IfNotPresent
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
@@ -94,7 +95,6 @@ spec:
             limits:
               cpu: 200m
               memory: 128Mi
-      restartPolicy: Never
 ---
 apiVersion: v1
 kind: Service
