--- a/kustomize/base/frontend.yaml
+++ b/kustomize/base/frontend.yaml
@@ -35,6 +35,7 @@ spec:
         runAsUser: 1000
       containers:
         - name: server
+          # this line is added to allow minikube to discover local docker images
           imagePullPolicy: IfNotPresent
           securityContext:
             allowPrivilegeEscalation: false
@@ -43,7 +44,7 @@ spec:
                 - all
             privileged: false
             readOnlyRootFilesystem: true
-          # image: gcr.io/google-samples/microservices-demo/frontend:v0.4.1
+          # image: gcr.io/google-samples/microservices-demo/frontend:v0.5.0
           image: frontend-local
           ports:
           - containerPort: 8080
