--- a/kustomize/base/frontend.yaml
+++ b/kustomize/base/frontend.yaml
@@ -36,7 +36,6 @@ spec:
       containers:
         - name: server
           # this line is added to allow minikube to discover local docker images
-          imagePullPolicy: IfNotPresent
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
@@ -44,8 +43,7 @@ spec:
                 - all
             privileged: false
             readOnlyRootFilesystem: true
-          # image: gcr.io/google-samples/microservices-demo/frontend:v0.5.0
-          image: frontend-local-tor
+          image: gcr.io/google-samples/microservices-demo/frontend:v0.5.0
           ports:
           - containerPort: 8080
           readinessProbe:
