--- a/kustomize/components/tor/kustomization.yaml
+++ b/kustomize/components/tor/kustomization.yaml
@@ -12,19 +12,21 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-resources:
-- base
-components:
-# - components/cymbal-branding
-# - components/google-cloud-operations
-# - components/memorystore
-# - components/network-policies
-# - components/service-accounts
-# - components/spanner
-# - components/container-images-tag
-# - components/container-images-tag-suffix
-# - components/container-images-registry
-# - components/native-grpc-health-check
-  - components/tor
+apiVersion: kustomize.config.k8s.io/v1alpha1
+kind: Component
+patchesStrategicMerge:
+# frontend - enable TOR
+- |-
+  apiVersion: apps/v1
+  kind: Deployment
+  metadata:
+    name: frontend
+  spec:
+    template:
+      spec:
+        containers:
+          - name: server
+            imagePullPolicy: IfNotPresent
+            securityContext:
+              readOnlyRootFilesystem: false
+            image: frontend-local-tor
