--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -73,7 +73,7 @@ COPY --from=torbuilder /root/.cargo/bin/arti /usr/bin/arti
 # See https://golang.org/pkg/runtime/
 ENV GOTRACEBACK=single
 
-RUN adduser -D -g "" arti
+RUN adduser -D -g 1000 arti
 RUN mkdir -p /home/arti/.local/share/arti
 
 ENV TRACING_BUILD_ENV ${BUILD_ENV}
